[package]
name = "pdqhash"
version = "0.1.0"
edition = "2021"
authors = ["TODO: Write your name <TODO: Write your email address>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { version = "^0.23.14" }
pdqhash = { version = "0.1.1" }
magnus = { version = "0.6.2" }
hex = { version = "0.4" }
